...
          Expanded(
            flex: 1,
            child: FilledButton.tonalIcon(
              onPressed: cancel,
              icon: const Icon(Icons.cancel),
              label: const Text(
                'Cancel',
                maxLines: 1,
                overflow: TextOverflow.ellipsis,
              ),
            ),
          ),
        ],
...
