...
  /// {@macro home_screen}
  const HomeScreen({super.key});

  @override
  Widget build(BuildContext context) => Scaffold(
        appBar: AppBar(
          title: const Text('Home'),
          leading: const SizedBox.shrink(),
          actions: CommonActions(),
        ),
        body: SafeArea(
          child: ListView(
            padding: const EdgeInsets.all(16),
...
